Refactor: userNumber 받고 생성하는 로직 리팩토링